# gmail-filter-bot

./: .env.example  .gitignore  README.md  filters.yaml.example  pyproject.toml
gmail_filter_bot/: __init__.py  __main__.py  cli.py  config.py  filter_manager.py  gmail_client.py
tests/: __init__.py  test_filter_manager.py
